--- a/soundwich/Base.lproj/LaunchScreen.storyboard
+++ b/soundwich/Base.lproj/LaunchScreen.storyboard
@@ -16,15 +16,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Soundwich" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rat-uU-CTn">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Soundwich" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rat-uU-CTn">
                                 <rect key="frame" x="258" y="249" width="85" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="rat-uU-CTn" secondAttribute="trailing" constant="257" id="KCV-Mj-qYM"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="rat-uU-CTn" secondAttribute="bottom" constant="330" id="a2M-Hh-hiX"/>
+                            <constraint firstItem="rat-uU-CTn" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="258" id="ltZ-Dn-CNC"/>
+                            <constraint firstItem="rat-uU-CTn" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="229" id="wY5-QY-4ap"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
