--- a/soundwich/Timeline.xib
+++ b/soundwich/Timeline.xib
@@ -6,7 +6,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TimelineView" customModule="soundwich" customModuleProvider="target">
             <connections>
+                <outlet property="constraintScrubberX" destination="g3x-Sy-JGd" id="v70-p2-uPU"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="YGK-T3-jKi"/>
+                <outlet property="scrubber" destination="leI-6f-BN6" id="SEV-GS-HNx"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -15,17 +17,29 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="leI-6f-BN6" userLabel="ScrubberHairline">
-                    <rect key="frame" x="0.0" y="0.0" width="1" height="103"/>
-                    <color key="backgroundColor" red="0.97647064920000004" green="0.1647058874" blue="0.1176470667" alpha="1" colorSpace="deviceRGB"/>
+                    <rect key="frame" x="0.0" y="7" width="1" height="96"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="K7S-0B-CXe" userLabel="shadow">
+                            <rect key="frame" x="-300" y="-248" width="600" height="600"/>
+                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="1" id="rXT-IL-aex"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" red="0.9960784912109375" green="0.99215692281723022" blue="0.99215692281723022" alpha="1" colorSpace="deviceRGB"/>
                     <constraints>
+                        <constraint firstAttribute="bottom" secondItem="K7S-0B-CXe" secondAttribute="bottom" id="6Rt-Gq-vDa"/>
+                        <constraint firstItem="K7S-0B-CXe" firstAttribute="top" secondItem="leI-6f-BN6" secondAttribute="top" constant="1" id="6ZA-0l-2vc"/>
                         <constraint firstAttribute="width" constant="1" id="GGh-Oe-8dM"/>
+                        <constraint firstItem="K7S-0B-CXe" firstAttribute="leading" secondItem="leI-6f-BN6" secondAttribute="leading" constant="1" id="Jd2-lW-Go5"/>
                     </constraints>
                 </view>
             </subviews>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="leI-6f-BN6" secondAttribute="bottom" id="Hov-oW-teB"/>
                 <constraint firstItem="leI-6f-BN6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="g3x-Sy-JGd"/>
-                <constraint firstItem="leI-6f-BN6" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="kep-2S-xDG"/>
+                <constraint firstItem="leI-6f-BN6" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="7" id="kep-2S-xDG"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="473.5" y="139.5"/>
