--- a/soundwich/Timeline.xib
+++ b/soundwich/Timeline.xib
@@ -6,9 +6,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TimelineView" customModule="soundwich" customModuleProvider="target">
             <connections>
-                <outlet property="constraintScrubberX" destination="g3x-Sy-JGd" id="v70-p2-uPU"/>
+                <outlet property="constraintScrubberX" destination="zzF-K4-ydh" id="vNS-Ce-s9z"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="YGK-T3-jKi"/>
                 <outlet property="scrubber" destination="leI-6f-BN6" id="SEV-GS-HNx"/>
+                <outlet property="scrubberHandle" destination="KMR-3Q-bFr" id="hmb-ia-qn0"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -16,22 +17,14 @@
             <rect key="frame" x="0.0" y="0.0" width="537" height="103"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="leI-6f-BN6" userLabel="ScrubberHairline">
-                    <rect key="frame" x="0.0" y="7" width="1" height="96"/>
+                <view userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="leI-6f-BN6" userLabel="ScrubberHairline">
+                    <rect key="frame" x="7" y="8" width="1" height="95"/>
                     <subviews>
-                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="K7S-0B-CXe" userLabel="shadow">
-                            <rect key="frame" x="-300" y="-248" width="600" height="600"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K7S-0B-CXe" userLabel="shadow">
+                            <rect key="frame" x="1" y="1" width="1" height="94"/>
                             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="1" id="rXT-IL-aex"/>
-                            </constraints>
-                        </view>
-                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KMR-3Q-bFr" userLabel="ScrubberHandle">
-                            <rect key="frame" x="-300" y="-252" width="600" height="600"/>
-                            <color key="backgroundColor" red="0.98823535439999999" green="0.15294118230000001" blue="0.1098039299" alpha="1" colorSpace="deviceRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="15" id="1Aj-bK-kKq"/>
-                                <constraint firstAttribute="height" constant="15" id="kp4-WK-T7r"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -41,15 +34,23 @@
                         <constraint firstItem="K7S-0B-CXe" firstAttribute="top" secondItem="leI-6f-BN6" secondAttribute="top" constant="1" id="6ZA-0l-2vc"/>
                         <constraint firstAttribute="width" constant="1" id="GGh-Oe-8dM"/>
                         <constraint firstItem="K7S-0B-CXe" firstAttribute="leading" secondItem="leI-6f-BN6" secondAttribute="leading" constant="1" id="Jd2-lW-Go5"/>
-                        <constraint firstAttribute="bottom" secondItem="KMR-3Q-bFr" secondAttribute="bottom" id="Ngz-pH-Squ"/>
-                        <constraint firstItem="KMR-3Q-bFr" firstAttribute="centerX" secondItem="leI-6f-BN6" secondAttribute="centerX" id="Osn-RR-b2S"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KMR-3Q-bFr" userLabel="ScrubberHandle">
+                    <rect key="frame" x="0.0" y="88" width="15" height="15"/>
+                    <color key="backgroundColor" red="0.98823535439999999" green="0.15294118230000001" blue="0.1098039299" alpha="1" colorSpace="deviceRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="15" id="1Aj-bK-kKq"/>
+                        <constraint firstAttribute="height" constant="15" id="kp4-WK-T7r"/>
                     </constraints>
                 </view>
             </subviews>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="leI-6f-BN6" secondAttribute="bottom" id="Hov-oW-teB"/>
-                <constraint firstItem="leI-6f-BN6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="g3x-Sy-JGd"/>
-                <constraint firstItem="leI-6f-BN6" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="7" id="kep-2S-xDG"/>
+                <constraint firstAttribute="bottom" secondItem="leI-6f-BN6" secondAttribute="bottom" id="46D-vI-psJ"/>
+                <constraint firstItem="KMR-3Q-bFr" firstAttribute="bottom" secondItem="leI-6f-BN6" secondAttribute="bottom" id="MP9-TQ-i2T"/>
+                <constraint firstItem="leI-6f-BN6" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="Nt8-2c-ntN"/>
+                <constraint firstItem="KMR-3Q-bFr" firstAttribute="centerX" secondItem="leI-6f-BN6" secondAttribute="centerX" id="V3H-5F-P3e"/>
+                <constraint firstItem="leI-6f-BN6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="zzF-K4-ydh"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="473.5" y="139.5"/>
