--- a/soundwich/Timeline.xib
+++ b/soundwich/Timeline.xib
@@ -37,11 +37,11 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KMR-3Q-bFr" userLabel="ScrubberHandle">
-                    <rect key="frame" x="-7" y="88" width="15" height="15"/>
-                    <color key="backgroundColor" red="0.98823535439999999" green="0.15294118230000001" blue="0.1098039299" alpha="1" colorSpace="deviceRGB"/>
+                    <rect key="frame" x="-8" y="86" width="17" height="17"/>
+                    <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="15" id="1Aj-bK-kKq"/>
-                        <constraint firstAttribute="height" constant="15" id="kp4-WK-T7r"/>
+                        <constraint firstAttribute="width" constant="17" id="1Aj-bK-kKq"/>
+                        <constraint firstAttribute="height" constant="17" id="kp4-WK-T7r"/>
                     </constraints>
                 </view>
             </subviews>
